--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
   schedule: #Set the CRON for MIDNIGHT IST --UTC
     - cron: "30 18 * * * "
-  workflow_dispatch":
+  workflow_dispatch:
     inputs:
       env:
         description: "Environment"
