--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       id: default
       run: |
              echo: "suiteXmlFile=${{github.event.input.suiteXmlFile || 'testng.xml'}}" >> $GITHUB_OUTPUT
-             echo: "env=${{github.event.input.env || qa}}" >> $GITHUB_OUTPUT
+             echo: "env=${{ github.event.input.env || 'qa'}}" >> $GITHUB_OUTPUT
         
     - name: Execute Test Automation Framework
       run: mvn clean test -DsuiteXmlFile="${{ github.event.inputs.suiteXmlFile }}" -Denv="${{ github.event.inputs.env }}"
