--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,16 @@
-name: Phoneix Test Automation Workflow
+name: Phoenix Test Automation Workflow
 
 on:
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-  schedule: #Set the CRON for MIDNIGHT IST --UTC
-    - cron: "30 18 * * * "
-  workflow_dispatch:
+  schedule: # Set the CRON for MIDNIGHT IST ---- UTC
+    - cron: "30 18 * * *"
+    - cron: "30 17 * * *"
+    - cron: "30 16 * * *"
+    
+  workflow_dispatch: 
     inputs:
       env:
         description: "Environment"
@@ -15,14 +18,12 @@ on:
         options: [qa,uat,dev]
         default: qa
         required: true
-
       suiteXmlFile:
         description: "TestNG Xml File"
         type: choice
         options: [testng.xml,smoke.xml,regression.xml]
         default: testng.xml
         required: true
-        
 jobs:
   test:
 
@@ -30,6 +31,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -37,7 +39,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-     - name: Default Values for Execution
+    - name: Default Values for Execution
       id: default
       run: |
             echo "suiteXmlFile=${{ github.event.inputs.suiteXmlFile || 'testng.xml'}}" >> $GITHUB_OUTPUT
@@ -45,12 +47,15 @@ jobs:
 
     - name: Execute Test Automation Framework
       run: mvn clean test -DsuiteXmlFile="${{ steps.default.outputs.suiteXmlFile }}" -Denv="${{ steps.default.outputs.env }}"
-
+    
     - name: Upload a Build Artifact
       if: always()
       uses: actions/upload-artifact@v4.6.2
-      with: 
+      with:
         name: SureFire Report
         path: target/surefire-reports/
         retention-days: 10
-    
+
+      
+
+  
